@@ -6,6 +6,8 @@
   * Fixed typos in EXAMPLES and GUIDES.  Pull Request #213 by Erkan Yilmaz.
   * Fixed handling of a quoted content-disposition size.  Pull Request #220 by
     Jason Rust
+  * Mechanize now ignores a missing gzip footer like browsers do.  Issue #224
+    by afhbl
 
 === 2.4
 
